{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 44,
  "lineage": "9fdc5f6b-06e5-693b-4af6-3ec2a312cce6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task_def_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:security-group/sg-045074b88fb274e69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045074b88fb274e69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-curso-devops-security-group",
            "name_prefix": "",
            "owner_id": "498352900801",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "Test",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:internet-gateway/igw-050ff67c553cb3e12",
            "id": "igw-050ff67c553cb3e12",
            "owner_id": "498352900801",
            "tags": {
              "Name": "tf-curso-devops-vpc"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-050ff67c553cb3e12",
            "id": "r-rtb-0bd02509b70aa34971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd02509b70aa3497",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:route-table/rtb-0439096b98f0a9985",
            "id": "rtb-0439096b98f0a9985",
            "owner_id": "498352900801",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-curso-devops-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-private-eu-west-2a",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:route-table/rtb-0c6bc376fe3c97086",
            "id": "rtb-0c6bc376fe3c97086",
            "owner_id": "498352900801",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-curso-devops-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-private-eu-west-2b",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:route-table/rtb-0bd02509b70aa3497",
            "id": "rtb-0bd02509b70aa3497",
            "owner_id": "498352900801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050ff67c553cb3e12",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-curso-devops-vpc-public"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-public",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb11d24ec8a0c6d2",
            "route_table_id": "rtb-0439096b98f0a9985",
            "subnet_id": "subnet-03b025f59df40fb35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a94f543eb53efc7",
            "route_table_id": "rtb-0c6bc376fe3c97086",
            "subnet_id": "subnet-024754e66e845b291"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c9d89bcd36a4930",
            "route_table_id": "rtb-0bd02509b70aa3497",
            "subnet_id": "subnet-0b584babb5c70bb26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb953b7071652213",
            "route_table_id": "rtb-0bd02509b70aa3497",
            "subnet_id": "subnet-00a72115bfa258631"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:subnet/subnet-03b025f59df40fb35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-03b025f59df40fb35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498352900801",
            "tags": {
              "Name": "tf-curso-devops-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-private-eu-west-2a",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:subnet/subnet-024754e66e845b291",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-024754e66e845b291",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498352900801",
            "tags": {
              "Name": "tf-curso-devops-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-private-eu-west-2b",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:subnet/subnet-0b584babb5c70bb26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.11.0/24",
            "id": "subnet-0b584babb5c70bb26",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498352900801",
            "tags": {
              "Name": "tf-curso-devops-vpc-public-eu-west-2a"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-public-eu-west-2a",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:subnet/subnet-00a72115bfa258631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.12.0/24",
            "id": "subnet-00a72115bfa258631",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498352900801",
            "tags": {
              "Name": "tf-curso-devops-vpc-public-eu-west-2b"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc-public-eu-west-2b",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            },
            "vpc_id": "vpc-0c1c7b92543b5ee4b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498352900801:vpc/vpc-0c1c7b92543b5ee4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d8586b0ece23a6b5",
            "default_route_table_id": "rtb-05f65d16ec219999e",
            "default_security_group_id": "sg-0ed927440b3e5eb6b",
            "dhcp_options_id": "dopt-038d856e9b182074f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c1c7b92543b5ee4b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f65d16ec219999e",
            "owner_id": "498352900801",
            "tags": {
              "Name": "tf-curso-devops-vpc"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "tf-curso-devops-vpc",
              "Owner": "TFProviders",
              "Project": "CursoDevOps"
            }
          }
        }
      ]
    }
  ]
}